<resources>
    <string name="app_name">The Prospector</string>
    <string name="welcome_text">Welcome!</string>
    <string name="Maaajor_pips">Maaajor Pips!</string>
    <string name="title_activity_survey_screen1">SurveyScreen1</string>
    <string name="title_activity_lure_screen">LureScreen</string>
    <string name="select_region">Select region:</string>
    <string name="quote_part_1">\"A goal without a plan "</string>
    <string name="quote_part_2">is just a wish.\"</string>
    <string name="enticer">With new information, only one of two things <i>WILL</i> happen…</string>
    <string name="followUp1">…you will move on with life…</string>
    <string name="followUp2">…or you will make a <i>change</i>.</string>
    <string name="income_source_line">For an <i>additional income</i> source</string>
    <string name="income_source_followUp">would you want to be informed?</string>
    <string name="title_activity_end_of_survey">EndOfSurvey</string>
    <string name="title_activity_rate_user_interest">RateUserInterest</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart_survey">Restart</string>
    <string name="to_be_contacted_toast">To be contacted select a high value.</string>
    <string name="next">Next</string>
    <string name="how_interested_would_you_say_you_are">How interested would you say you are?</string>
    <string name="honestly">Honestly.</string>
    <string name="title_activity_collect_user_details">CollectUserDetails</string>
    <string name="preferred_form_of_contact">Preferred form of contact:</string>
    <string name="swipe_for_more_options">Swipe for more options.</string>
    <string name="phone_number">Phone Number</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="instagram_username">IG Username</string>
    <string name="email_address">Email Address</string>
    <string name="phone_call">Phone Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="email">Email</string>
    <string name="contact_info_saved">Contact info saved.</string>
    <string name="request_name">Please enter your full name.</string>
    <string name="request_contact_info">Please enter your </string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="title_activity_administrator">Administrator</string>
    <string name="title_activity_create_admin">CreateAdmin</string>
    <string name="please_check_password">Please check your password fields.</string>
    <string name="enter_username">Enter a username!</string>
    <string name="welcome">Welcome</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="new_password">New Password</string>
    <string name="new_username">New Username</string>
    <string name="continue_to_admin">Continue</string>
    <string name="view_password">View Password</string>
    <string name="prospects">Prospects</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="administrator_login">Administrator Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_all_lingering_prospects">Delete all lingering prospects.</string>
    <string name="sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="contact_soon">Contact Soon.</string>
    <string name="give_second_chance">Give Second Chance.</string>
    <string name="make_final_offer">Make Final Offer.</string>
    <string name="delete_prospect">Delete Prospect.</string>
    <string-array name="prospectListSortOptions">
        <item>"Sort prospects by …"</item>
        <item>Show all prospects</item>
        <item>Interest Level</item>
        <item>No. of times contacted</item>
        <item>Instagram only</item>
        <item>Whatsapp only</item>
        <item>Phone call only</item>
        <item>Email only</item>
        <item>Region</item>
    </string-array>
    <string name="title_activity_pop_request_password">PopRequestPassword</string>
    <string name="change">Change</string>
    <string name="title_activity_change_admin_info">ChangeAdminInfo</string>
    <string name="to_keep_username">To keep your old username, leave the field blank.</string>
    <string name="password_changed">Password changed successfully!</string>
    <string name="settings_title">Settings</string>
    <string name="delete_recommended_prospects">Delete Recommended Prospects</string>
    <string name="invalid_phone_number">Invalid phone number!</string>
    <string name="_contacted">contacted </string>
    <string name="title_activity_prospect_details_class">ProspectDetailsClass</string>
    <string name="contacted">Contacted </string>
    <string name="save_change">Save Change</string>
    <string name="times">times</string>
    <string name="recommedation">Recommedation:</string>
    <string name="primary_contact_preference">Primary Contact Preference:</string>
    <string name="secondary_contact_preference">Secondary Contact Preference:</string>
    <string name="id_">ID#:</string>
    <string name="region">Region:</string>
    <string name="title_activity_delete_prospect">DeleteProspect</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this prospect?</string>
    <string name="tobago">Tobago</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="international">International</string>
    <string name="central">Central</string>
    <string name="cancel">Cancel</string>
    <string name="interest_level">Interest Level:</string>
    <string name="out_of_10">/10</string>
    <string name="finish">Finish!</string>
    <string name="new_entry">New Entry</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="back_to_admin_page">Back to Admin page.</string>
    <string name="title_activity_prospects_rec_to_delete">ProspectsRecToDelete</string>
    <string name="delete_these">Delete these</string>
    <string name="delete_prospect_query">Delete Prospect?</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="keep_prospect">Keep Prospect</string>
    <string name="see_interest_level">See Interest Level</string>
    <string name="saved">Saved!</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="mark_as_contacted">Mark as Contacted</string>
    <string name="settings">Settings</string>
    <string name="garbage_image">garbage image</string>
    <string name="survey">Survey</string>
    <string name="admin">Admin</string>
    <string name="thank_you">Thank you!</string>
    <string name="change_admin_info">Change Admin Info</string>
    <string name="secondary_choice_optional">Secondary Choice (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="swipe_left">Swipe left.</string>
    <string name="primary_choice">Primary Choice</string>
    <string name="recommended_messages">Recommended Messages</string>
    <string name="title_activity_recommended_messages">RecommendedMessages</string>
    <string name="back">Back</string>
    <string name="copy_convo_starter">Copy Convo Starter</string>
    <string name="responses">Responses:</string>
    <string name="if_prospect_says_yes">If Prospect says \'Yes\':</string>
    <string name="copy_yes_response">Copy \'Yes\' Response</string>
    <string name="copy_no_response">Copy \'No\' Response</string>
    <string name="if_prospect_says_no">If Prospect says \'No\':</string>
    <string name="if_prospect_says_no_again">If Prospect says \'No\' again:</string>
    <string name="conversation_start">Conversation Start:</string>
    <string name="copy_messages">Copy Messages</string>
    <string name="copy_follow_up">Copy Follow Up</string>
    <string name="copy_neither_response">Copy \'Neither\' Response</string>
    <string name="if_prospect_says_neither">If Prospect says \'Neither\':</string>
    <string name="a_follow_up_is_recommended">(A follow up is recommended. If the prospect changes their mind send the \'No\' response)</string>
    <string name="copy_reply">Copy Reply</string>
    <string name="If_the_Prospect_asks_questions">If the Prospect asks questions:</string>
    <string name="please_delete_your_prospect">Please DELETE YOUR PROSPECT after this step.</string>
    <string name="recordings_follow_up">Recordings Follow Up:</string>
    <string name="physical_presentation_follow_up">Physical Presentation Follow Up:</string>
    <string name="follow_up_messages">Follow Up Messages:</string>
    <string name="copy_recordings_response">Copy \'Recordings\' Response</string>
    <string name="copy_live_presentation_response">Copy \'Live Presentation\' Response</string>
    <string name="if_prospect_asks_for_recordings_link">If prospect asks for recordings link:</string>
    <string name="if_prospect_asks_for_live_presentation">If prospect asks for live presentation:</string>
    <string name="may_not_be_contacted">May not be contacted.</string>
    <string name="likely_to_be_contacted">Likely to be contacted.</string>
    <string name="will_definitely_be_contacted">Will definitely be contacted.</string>
    <string name="_prospects_question_mark">prospects?</string>
    <string name="swipe_for_more">Swipe for more</string>
</resources>
