<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="#7f7">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:gravity="top"
        android:textAlignment="center"
        android:textColor="#444"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:id="@+id/changeAdminInfoBtn"
        android:onClick="changeAdminInfo"
        android:text="@string/change_admin_info"
        android:backgroundTint="#66111fff"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/recommendedMessagesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sortOptionsSpinner"
        android:backgroundTint="#66111fff"
        android:onClick="viewRecommendedMessages"
        android:text="@string/recommended_messages"
        android:textAlignment="center"
        android:textSize="15sp"
        tools:ignore="UnusedAttribute" />

    <Spinner
        android:id="@+id/sortOptionsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/changeAdminInfoBtn"
        android:layout_marginTop="25dp"
        android:backgroundTint="#66111fff"
        android:textAlignment="center"
        tools:ignore="UnusedAttribute" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sortOptionsSpinner"
        android:layout_above="@id/backButton"
        android:id="@+id/checkboxes"
        android:layout_centerInParent="true"
        android:visibility="invisible">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/majorityCheckBoxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/northBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/north" />

                        <CheckBox
                            android:id="@+id/southBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/south" />

                        <CheckBox
                            android:id="@+id/centralBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/central" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/eastBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/east" />

                        <CheckBox
                            android:id="@+id/westBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/west" />

                        <CheckBox
                            android:id="@+id/tobagoBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tobago" />
                    </LinearLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/internationalBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/international" />

                <Button
                    android:id="@+id/applyFilter"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:backgroundTint="#66111fff"
                    android:onClick="applyProspectFilter"
                    android:text="@string/apply_filter"
                    android:textColor="#ddd"
                    android:visibility="invisible"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </ScrollView>
        <ImageView
            android:id="@+id/cardinalPoints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha=".07"
            android:src="@drawable/cardinalpoints"
            android:contentDescription="@string/Maaajor_pips" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="29dp"
        android:contentDescription="@string/back_to_admin_page"
        android:onClick="adminPage"
        android:scaleType="fitXY"
        android:src="@drawable/backbutton"
        tools:layout_editor_absoluteX="318dp"
        tools:layout_editor_absoluteY="501dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:backgroundTint="#fff11111"
        android:onClick="deleteLingeringProspects"
        android:text="@string/delete_recommended_prospects"
        android:textAlignment="center"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap,UnusedAttribute" />
</RelativeLayout>