<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textAlignment="center"
            android:keepScreenOn="true"
            android:text="@string/quote_part_1"
            android:textColor="#7f7"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:id="@+id/quotePart1"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/quotePart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:keepScreenOn="true"
            android:text="@string/quote_part_2"
            android:textColor="#7f7"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:visibility="invisible"
            android:id="@+id/enticer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:text="@string/enticer"
            android:textAlignment="textStart"
            android:textColor="#7f7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:visibility="invisible"
            android:id="@+id/followUp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textAlignment="textEnd"
            android:text="@string/followUp1"
            android:textColor="#7f7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/followUp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:text="@string/followUp2"
            android:layout_marginTop="25dp"
            android:textColor="#7f7"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/incomeSourceLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:text="@string/income_source_line"
            android:textColor="#7f7"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>
        <TextView
            android:visibility="invisible"
            android:id="@+id/incomeSourceFollowUp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:text="@string/income_source_followUp"
            android:textColor="#7f7"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="70dp"
        android:id="@+id/answerButtons"
        android:visibility="invisible"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/><!--This is used to center the buttons by taking up some of the horizontal weight-->
        <Button
            android:backgroundTint="#0099cc"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:onClick="rateInterestScreen"
            android:id="@+id/yesButton"
            android:layout_weight="1"/>

        <Button
            android:backgroundTint="#0099cc"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:onClick="goToEndOfSurveyScreen"
            android:id="@+id/noButton"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/><!--This is used to center the buttons by taking up some of the horizontal weight-->
    </LinearLayout>

    <ImageView
        android:id="@+id/majorpipslogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".1"
        android:src="@drawable/majorpips_logo"
        android:contentDescription="@string/Maaajor_pips" />


</FrameLayout>