<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:background="#0099cc">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/administrator_login"
        android:textAlignment="center"
        android:textColor="#333"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/majorpipslogo"
        android:layout_width="match_parent"
        android:contentDescription="@string/Maaajor_pips"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha=".1"
        android:src="@drawable/majorpips_logo" />
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#33ddff"
        android:orientation="vertical"
        android:weightSum="2">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_margin="6dp"
            android:backgroundTint="#7f7"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:textColorHint="@color/colorAccent"
            android:textAlignment="center"
            android:textColor="#333"
            android:layout_weight="1"
            tools:ignore="UnusedAttribute" />
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="#7f7"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="#333"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
    <Button
        android:layout_width="120dp"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#7f7"
        android:text="@string/login"
        android:onClick="validateUserCredentials"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>