<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAdmin"
    android:background="#0099cc">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#333"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/majorpipslogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha=".1"
        android:src="@drawable/majorpips_logo"
        android:contentDescription="@string/Maaajor_pips" />
    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="#33ddff"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#7f7"
            android:hint="@string/new_username"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#333"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:backgroundTint="#7f7"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#333"
                android:layout_weight="7"
                tools:ignore="NestedWeights,UnusedAttribute" />

            <ImageView
                android:id="@+id/showPassword1"
                android:layout_width="26dp"
                android:layout_height="46dp"
                android:layout_margin="6dp"
                android:layout_weight="3"
                android:contentDescription="@string/view_password"
                android:scaleType="fitXY"
                android:src="@drawable/hidepassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="10">

            <EditText
                android:id="@+id/verifyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="7"
                android:backgroundTint="#7f7"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#333"
                tools:ignore="NestedWeights,UnusedAttribute" />

            <ImageView
                android:id="@+id/showPassword2"
                android:layout_width="39dp"
                android:layout_height="46dp"
                android:layout_margin="6dp"
                android:layout_weight="2.5"
                android:contentDescription="@string/view_password"
                android:scaleType="fitXY"
                android:src="@drawable/hidepassword" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="120dp"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#7f7"
        android:text="@string/continue_to_admin"
        android:onClick="checkCredentials"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>